# pico2-arm-semihosting

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
config/: heapInstConfig.h  heapTracerConfig.h
examples/: CMakeLists.txt
examples/heap_tracker/: CMakeLists.txt  analyze_heap_trace.py  main.c
examples/hello_world/: CMakeLists.txt  main.c
examples/host/: CMakeLists.txt
examples/host/heap_trace/: CMakeLists.txt  main.c
examples/malloc_double_wrapper/: CMakeLists.txt  main.c
examples/malloc_wrapper/: CMakeLists.txt  README.md  main.c
examples/pico/heap_trace/: CMakeLists.txt  main.c
examples/pico/hello_world/: CMakeLists.txt
examples/semihosting/: CMakeLists.txt
examples/semihosting/heap_trace/: CMakeLists.txt  main.c
examples/semihosting/hello_world/: CMakeLists.txt  main.c
hello_world/: CMakeLists.txt  main.c
include/: heapInstApi.h  heapInstDefines.h  heapTracer.h  heapTracerDefines.h
include/heapInst/: heapInst.h
include/heap_tracer/: heap_tracker.h
include/pico_semihosting/: heap_tracker.h
include/semihosting/: semihosting.h
ports/pico/: pico-semihosting.cmake  pico_platform_hooks.c  pico_platform_hooks.h  rpi-pico-toolchain.cmake
src/: CMakeLists.txt  heapInst.c  heapInst_wrap.c  heap_tracker.c  semihosting_utils.c
src/heapInstrumentation/: heapInst.c
src/heap_instrumentation/: heap_tracker.c
src/semihosting/: CMakeLists.txt  semihosting.c
stream/filesystem/: CMakeLists.txt  heapInstStream.c
stream/semihosting/: CMakeLists.txt  heapInstStream.c  semihosting.c  semihosting_ops.h
stream/semihosting/include/: heapInstStream.h  semihosting.h
stream/udp/: heapInstStream.c  heapTrcStream.c
stream/udp/config/: heapInstStreamConfig.h  heapTracerStreamConfig.h
tests/: CMakeLists.txt  heapInstStream.c  heapInstStream.h  heapInstTest.cpp  heap_tracker_test.cpp  heap_tracker_test_shims.c
